<resources>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="profile_sex_prompt">性别</string>
    <string name="profile_education_prompt">学历</string>
    <string name="profile_marriage_prompt">婚史</string>
    <string name="version_code">版本号：</string>
    <string name="app_name">世纪佳缘</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_mate_selection">择偶条件</string>
    <string name="title_search_result">搜索结果</string>
    <string name="dialog_data_reading">读取中...</string>
    <string name="update_app">软件更新</string>
    <string name="update_app_discription">检测到新版本，请更新。</string>
    <string name="label_nasdaq">唯一在美国纳斯达克上市的婚恋网站</string>
    <string name="register_only_username">k7ypx3mcf95j</string>
    <string name="realm">sun</string>
    <string name="exit_confirm_title">退出佳缘</string>
    <string name="exit_confirm_msg">确定退出佳缘吗?</string>
    <string name="exit_confirm_cancel">取消</string>
    <string name="exit_confirm_exit">退出</string>
    <string name="prefs_save_password_key">PrefsSavePassword</string>
    <string name="prefs_auto_login_key">PrefsAutoLogin</string>
    <string name="prefs_user_name_key">PrefsUserName</string>
    <string name="prefs_password_key">PrefsPassword</string>
    <string name="prefs_mail_stamp_alert">PrefsMailStampAlert</string>
    <string name="prefs_if_dn_key">PrefsIfDistanceNotification</string>
    <string name="prefs_dn_key">PrefsDistanceNotification</string>
    <string name="prefs_if_sl_key">PrefsIfShareLocation</string>
    <string name="prefs_mail_template_0">PrefsMailTemplate0</string>
    <string name="prefs_mail_template_1">PrefsMailTemplate1</string>
    <string name="prefs_mail_template_2">PrefsMailTemplate2</string>
    <string name="prefs_search_condition_set">Prefs_search_condition_set</string>
    <string name="prefs_search_sex">Prefs_search_sex</string>
    <string name="prefs_search_min_age">Prefs_search_min_age</string>
    <string name="prefs_search_max_age">Prefs_search_max_age</string>
    <string name="prefs_search_work_location">Prefs_search_work_location</string>
    <string name="prefs_search_work_sublocation">Prefs_search_work_sublocation</string>
    <string name="prefs_search_min_height">Prefs_search_min_height</string>
    <string name="prefs_search_max_height">Prefs_search_max_height</string>
    <string name="prefs_search_income">Prefs_search_income</string>
    <string name="prefs_search_marriage">Prefs_search_marriage</string>
    <string name="prefs_search_education">Prefs_search_education</string>
    <string name="prefs_last_update_date">Prefs_last_update_date</string>
    <string name="prefs_match_check_photo_date">Prefs_match_check_photo_date</string>
    <string name="prefs_myprofile_check_avatar_date">Prefs_myprofile_check_avatar_date</string>
    <string name="prefs_last_location_lat">Prefs_last_location_lat</string>
    <string name="prefs_last_location_lng">Prefs_last_location_lng</string>
    <string name="prefs_skyhook_username">Prefs_skyhook_username</string>
    <string name="prefs_reg_nickname">Prefs_reg_nickname</string>
    <string name="prefs_reg_sex">Prefs_reg_sex</string>
    <string name="prefs_reg_birthday">Prefs_reg_birthday</string>
    <string name="prefs_reg_work_loc">Prefs_reg_work_loc</string>
    <string name="prefs_reg_work_loc_idx">Prefs_reg_work_loc_idx</string>
    <string name="prefs_reg_work_sub_loc">Prefs_reg_work_sub_loc</string>
    <string name="prefs_reg_work_sub_loc_idx">Prefs_reg_work_sub_loc_idx</string>
    <string name="prefs_reg_height">Prefs_reg_height</string>
    <string name="prefs_reg_marriage">Prefs_reg_marriage</string>
    <string name="prefs_reg_education">Prefs_reg_education</string>
    <string name="prefs_reg_income">Prefs_reg_income</string>
    <string name="prefs_reg_note">Prefs_reg_note</string>
    <string name="prefs_shortcut_created">Prefs_shortcut_create</string>
    <string name="tabs_1_tab_1">tabs_1_tab_1</string>
    <string name="tabs_1_tab_2">tabs_1_tab_2</string>
    <string name="tabs_1_tab_3">tabs_1_tab_3</string>
    <string name="str_longitude">经度(Longitude)：</string>
    <string name="str_latitude">纬度(Latitude)：</string>
    <string name="str_button1">查询</string>
    <string name="str_button2">+</string>
    <string name="str_button3">-</string>
    <string name="search_label">search_label</string>
    <string name="search_hint">search_hint</string>
    <string name="search_invoke">search_invoke</string>
    <string name="home_tab_text_0">缘分</string>
    <string name="home_tab_text_1">信箱</string>
    <string name="home_tab_text_2">搜索</string>
    <string name="home_tab_text_3">服务</string>
    <string name="home_tab_text_4">资料</string>
    <string name="home_botton_text_0">登录</string>
    <string name="home_botton_text_1">免费注册</string>
    <string name="home_text_0">世纪佳缘严肃交友</string>
    <string name="home_login">登录</string>
    <string name="home_register">免费注册</string>
    <string name="login_text_email">世纪佳缘用户名</string>
    <string name="login_text_password">密码</string>
    <string name="login_text_savePassword_checkbox">记住密码</string>
    <string name="login_text_autoLogin_checkbox">自动登录</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_loading">正在登录</string>
    <string name="login_text_register">免费注册</string>
    <string name="login_text_edittext_check">用户名，密码 不能为空</string>
    <string name="login_text_email_invalid">用户名不合法</string>
    <string name="login_text_login_error__7">未提供用户名或密码：</string>
    <string name="login_text_login_error_2">用户名或密码填写错误</string>
    <string name="login_text_login_error_3">登录过于频繁</string>
    <string name="login_text_login_error_4">未提供ChannelId</string>
    <string name="login_text_login_error__1">黑名单会员登录</string>
    <string name="login_text_login_error__2">资料关闭会员登录</string>
    <string name="login_text_login_error__5">准黑会员登录</string>
    <string name="register_text_hint_email">请输入邮箱号</string>
    <string name="register_text_hint_mobile">请输入手机号</string>
    <string name="register_text_password">输入您的密码</string>
    <string name="register_text_nickname">昵称:不可修改</string>
    <string name="register_botton_text_back">返回首页</string>
    <string name="register_botton_text_submit">提交注册</string>
    <string name="register_text_edittext_check">用户名，密码不能为空</string>
    <string name="register_text_nickname_blank">昵称不能为空</string>
    <string name="register_text_email_invalid">请输入正确的邮箱地址</string>
    <string name="register_text_nickname_invalid">昵称过长，如用中文，需少于10字</string>
    <string name="register_text_register_error">注册失败</string>
    <string name="register_text_register_error__20">用户账号 昵称 密码 性别 验证失败</string>
    <string name="register_text_register_error__21">生日 验证失败</string>
    <string name="register_text_register_error__22">婚姻状况 验证失败</string>
    <string name="register_text_register_error__23">学历 验证失败</string>
    <string name="register_text_register_error__24">收入 验证失败</string>
    <string name="register_text_register_error__25">工作地区 验证失败</string>
    <string name="register_text_register_error__26">独白限定在20-1600字之间</string>
    <string name="register_text_register_error__27">注册条例 验证失败</string>
    <string name="register_text_register_error__28">注册验证失败</string>
    <string name="register_text_register_error__29">账号已经存在,注册失败。</string>
    <string name="register_text_register_error__31">手机验证码错误</string>
    <string name="register_text_register_error__30">注册失败</string>
    <string name="register_text_register_error_note">请</string>
    <string name="register_text_password_comfirm">确认密码</string>
    <string name="register_text_man">男</string>
    <string name="register_text_woman">女</string>
    <string name="register_text_select_birthday">选择生日</string>
    <string name="register_text_next">下一步</string>
    <string name="register_submit">注册信息提交中...</string>
    <string name="register_text_hint_personal_note">个人独白</string>
    <string name="send_reg_vali_msg_success">验证消息已发送，请注意查收！</string>
    <string name="send_reg_vali_over_three_times">每天发送验证不能超过三次。</string>
    <string name="send_reg_vali_high_frequency">请求频率过快</string>
    <string name="send_reg_vali_interface_error">信息接口错误</string>
    <string name="send_reg_vali_registered_num">该手机号已注册</string>
    <string name="send_reg_vali_num_format_error">手机号码格式错误</string>
    <string name="send_reg_validation_code_format_error">验证码格式错误</string>
    <string name="send_reg_vali_hint_validation_code">验证码</string>
    <string name="send_reg_vali_btn_active">获取验证码</string>
    <string name="register_type_mobile">手机号注册</string>
    <string name="register_type_email">邮箱注册</string>
    <string name="register_next">下一步</string>
    <string name="label_hint_support_type">支持手机号和邮箱注册</string>
    <string name="label_hint_fill_in_vali_code">请输入短信获取的验证码</string>
    <string name="register_text_vali_code_hint">验证码</string>
    <string name="register_text_password_ilegal">密码必须为字母或数字，长度6~20位</string>
    <string name="license_checkbox_title">我已阅读《免责声明》</string>
    <string name="link_license">阅读《免责声明》</string>
    <string name="license_title">免责声明</string>
    <string name="license_content">	世纪佳缘手机客户端是免费软件，针对年满18周岁的未婚人员使用，使用该软件需要接入网络。除会员服务收取相应费用之外，我们不以任何形式售卖该软件以及软件中的会员资料。\n	我们在保证会员资料真实方面做了严格的审核工作，但是不排除有个别人员利用该软件做违法的事情，并由此产生欺诈行为，世纪佳缘对此不负任何责任，请自行辨别对方的资料真实性，谨慎交友。\n	该软件需要使用您的位置功能，请选择开启或者关闭，部分功能需要位置功能支持，如位置提醒功能。我们只利用位置功能为你匹配适合的会员，并不记录和利用您的位置做任何用户允许范围外的事情。\n	用户需要对自己资料真实性负责，禁止利用该软件做违法活动，禁止上传淫秽图片，禁止发布政治、反动、色情、种族歧视等内容，一经发现会立即删除，严重者终身禁用帐号并移交公安机关处理。\n	我们会对注册会员的资料进行严格的保密，不会以任何目的和形式出售给第三方公司或者个人。但是不排除个别公司利用互联网技术抓取世纪佳缘网站的会员基本资料，但是决不会取得会员认证的手机和身份证号码等资料，请放心注册认证。\n	上海花千树信息科技有限公司对该软件有唯一的修改升级权限，并有权终止一部分版本的使用。请及时更新最新版本。</string>
    <string name="license_agreement">知道了</string>
    <string name="mate_selection_botton_text_confirm">确认</string>
    <string name="mate_selection_age_range_error">请重新选择年龄范围</string>
    <string name="mate_selection_height_range_error">请重新选择身高范围</string>
    <string name="mate_selection_submit_failed">提交失败</string>
    <string name="main_match">缘分</string>
    <string name="main_mail">信箱</string>
    <string name="main_search">搜索</string>
    <string name="main_profile">资料</string>
    <string name="main_service">服务</string>
    <string name="service_exit_confirm">是否退出程序?</string>
    <string name="service_exit_confirm_cancel">取消</string>
    <string name="service_exit_confirm_exit">退出</string>
    <string name="match_text_online">在线状态</string>
    <string name="match_text_nickname">昵称</string>
    <string name="match_text_education">学历</string>
    <string name="mail_send">发送</string>
    <string name="mail_send_text_info_0">收件人:</string>
    <string name="mail_send_text_info_1_1">贴邮票</string>
    <string name="mail_send_text_info_2">快捷发送</string>
    <string name="mail_send_text_info_3">点击文字直接发送</string>
    <string name="mail_send_text_edit_text">邮件内容</string>
    <string name="mail_send_text_send_mail">发送</string>
    <string name="mail_send_text_save_to_template">存为模板</string>
    <string name="mail_send_text_template_0">模板1</string>
    <string name="mail_send_text_template_1">模板2</string>
    <string name="mail_send_text_template_2">模板3</string>
    <string name="myprofile_text_myprofile">个人资料</string>
    <string name="myprofile_text_mate_selection">择偶要求</string>
    <string name="myprofile_text_setting">软件设置</string>
    <string name="setting_text0">距离提醒</string>
    <string name="setting_text1">打开距离提醒后，有符合择偶条件的用户,系统将在第一时间通知到您。\n此服务时间为每天8:00-22:00</string>
    <string name="setting_text_distance500">500</string>
    <string name="setting_text_distance1000">1000</string>
    <string name="setting_text_distance2000">2000</string>
    <string name="setting_text2">分享位置</string>
    <string name="setting_text3">分享位置方便对方按距离搜索到你，该服务不会暴露您的具体位置</string>
    <string name="recommend_to_friends">推荐该软件给朋友</string>
    <string name="setting_text_logout">退出账号</string>
</resources>