<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_register" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@android:color/white" android:gravity="left|center" android:id="@id/register_title" android:background="@drawable/title_background" android:paddingLeft="14.0dip" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_register" android:layout_alignParentTop="true" />
    <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="74.0dip">
        <TableRow>
            <EditText android:id="@id/et_register_mobile" android:layout_width="150.0dip" android:layout_height="wrap_content" android:hint="@string/register_text_hint_mobile" android:singleLine="true" android:maxLength="11" android:inputType="number" />
            <Button android:textColor="@color/text_color" android:id="@id/btn_register_vali_mobile" android:background="@drawable/btn_negative_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:text="@string/send_reg_vali_btn_active" />
        </TableRow>
        <TableRow android:layout_marginTop="47.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_hint_fill_in_vali_code" />
            <EditText android:id="@id/et_register_valid_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:layout_marginBottom="47.0dip" android:hint="@string/send_reg_vali_hint_validation_code" android:maxLength="5" android:inputType="number" />
        </TableRow>
    </TableLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/btn_register_next" android:background="@drawable/btn_positive_selector" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginTop="47.0dip" android:text="@string/register_next" />
</LinearLayout>