<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@android:color/white" android:gravity="left|center" android:id="@id/mail_send_title" android:background="@drawable/title_background" android:paddingLeft="14.0dip" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mail_send" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <TableLayout android:id="@id/mail_send_table_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="12.0dip" android:stretchColumns="2" android:shrinkColumns="1"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <TableRow>
                        <TextView android:textSize="22.0sp" android:textStyle="bold" android:id="@id/mail_send_text_info_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" android:text="@string/mail_send_text_info_0" />
                        <TextView android:textSize="22.0sp" android:textStyle="bold" android:id="@id/mail_send_text_info_1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/mail_send_table_1" android:layout_width="fill_parent" android:layout_height="wrap_content"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <EditText android:id="@id/mail_send_edit" android:layout_width="200.0dip" android:layout_height="wrap_content" android:hint="@string/mail_send_text_edit_text" android:minLines="3" android:singleLine="false" android:maxLength="300" />
                    <Button android:textSize="22.0sp" android:layout_gravity="right|center" android:id="@id/mail_send_button_send_mail" android:background="@drawable/btn_send_mail_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/mail_send_text_send_mail" />
                </LinearLayout>
                <TableLayout android:id="@id/mail_send_table_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <TableRow>
                        <Button android:textSize="16.0sp" android:textColor="@color/text_color" android:id="@id/mail_send_button_save_to_template" android:background="@drawable/btn_template_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mail_send_text_save_to_template" />
                        <Button android:textSize="16.0sp" android:textColor="@color/text_color" android:id="@id/mail_send_button_template_0" android:background="@drawable/btn_template_selector" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/mail_send_text_template_0" />
                        <Button android:textSize="16.0sp" android:textColor="@color/text_color" android:id="@id/mail_send_button_template_1" android:background="@drawable/btn_template_selector" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/mail_send_text_template_1" />
                        <Button android:textSize="16.0sp" android:textColor="@color/text_color" android:id="@id/mail_send_button_template_2" android:background="@drawable/btn_template_selector" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/mail_send_text_template_2" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:id="@id/mail_send_table_3" android:layout_width="fill_parent" android:layout_height="wrap_content"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <TableRow>
                        <CheckBox android:textSize="20.0sp" android:textColor="#ff888888" android:id="@id/mail_send_checkbox_stamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mail_send_text_info_1_1" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <TableLayout android:id="@id/mail_send_table_4" android:background="@drawable/bg_quick_reply" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <TableRow>
                    <TextView android:textSize="16.0sp" android:id="@id/mail_send_text_info_2" android:paddingLeft="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" android:text="@string/mail_send_text_info_2" />
                    <TextView android:textSize="14.0sp" android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/mail_send_text_info_3" android:paddingRight="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mail_send_text_info_3" />
                </TableRow>
            </TableLayout>
            <ListView android:id="@id/mail_send_quick_reply_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/list_divider" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>